--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.6",
     "mysql": "^2.11.1",
-    "sequelize": "^3.24.8"
+    "sequelize": "^3.24.8",
+    "multer": "^1.2.0"
   }
 }
