--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,20 @@
 {
   "development": {
     "username": "root",
-    "password": "moxnix123",
-    "database": "burgers_db",
-    "host": "127.0.0.1",
+    "password": "Null",
+    "database": "project2_db",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "moxnix123",
-    "database": "burgers_db",
-    "host": "127.0.0.1",
+    "password": "null",
+    "database": "project2_db",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "production": {
-    "username": "l4jdvossr51vxmoo",
-    "password": "fkmsx3vtoktq4355",
-    "database": "burgers_db",
-    "host": " q3vtafztappqbpzn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "use_env_variable":"JAWSDB_URL",
     "dialect": "mysql"
   }
 }
