--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.6",
     "method-override": "^2.3.6",
     "multer": "^1.2.0",
     "mysql": "^2.11.1",
     "node-exec-promise": "^0.1.1",
+    "path": "^0.12.7",
     "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "^2.4.0",
     "sqlite3": "^3.1.8"
