--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
   "homepage": "https://github.com/StarfoxMulder/MissingLinks#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "csvdata": "^1.3.0",
-    "debug": "^2.2.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.6",
@@ -40,7 +38,6 @@
     "node-exec-promise": "^0.1.1",
     "path": "^0.12.7",
     "sequelize": "^2.0.0-rc1",
-    "sequelize-cli": "^2.4.0",
-    "sqlite3": "^3.1.8"
+    "sequelize-cli": "^2.4.0"
   }
 }
