--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.6",
+    "lodash": "^4.17.2",
     "method-override": "^2.3.6",
     "mysql": "^2.11.1",
     "node-exec-promise": "^0.1.1",
