--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "MissingLinks",
+  "name": "missinglinks",
   "version": "1.0.0",
-  "description": "Making the world a better place one link at a time.",
+  "description": "Making the world a better plae one link at a time",
   "main": "server.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -11,17 +14,6 @@
     "type": "git",
     "url": "git+https://github.com/StarfoxMulder/MissingLinks.git"
   },
-  "keywords": [
-    "find",
-    "missing item",
-    "set",
-    "reduce waste",
-    "sell",
-    "node.js",
-    "MySQL",
-    "ORM",
-    "Handlebars"
-  ],
   "author": "Team MissingLinks",
   "license": "ISC",
   "bugs": {
@@ -33,12 +25,10 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.6",
-    "lodash": "^4.17.2",
-    "method-override": "^2.3.6",
-    "mysql": "^2.11.1",
-    "node-exec-promise": "^0.1.1",
+    "multer": "^1.2.0",
+    "mysql": "^2.12.0",
     "path": "^0.12.7",
-    "sequelize": "^2.0.0-rc1",
+    "sequelize": "^3.27.0",
     "sequelize-cli": "^2.4.0"
   }
 }
